--- a/Aplicacao/App_Mass_Mailing/resources/views/layouts/master.edge
+++ b/Aplicacao/App_Mass_Mailing/resources/views/layouts/master.edge
@@ -6,9 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mass Mailing</title>
     {{ style('https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css') }}
+    <!--{{ style('https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css') }}-->
     {{ style('style') }}
     {{ script('https://code.jquery.com/jquery-3.3.1.slim.min.js') }}
     {{ script('https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/js/jquery.tablesorter.min.js')}}
+    {{ script('https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/min/dropzone.min.js')}}
+    {{ script('https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')}}
+
+
+
+
 </head>
 <body>
     <div class="background">
