--- a/Aplicacao/App_Mass_Mailing/resources/views/Mensagens/create-msg-email.edge
+++ b/Aplicacao/App_Mass_Mailing/resources/views/Mensagens/create-msg-email.edge
@@ -4,7 +4,9 @@
   <div class="row">
     <div class="col-md-3"></div>
       <div class="col-md-6 shadow bg-white mt-5 rounded p-3">
-        <div class="x2"><a href="/">x</a></div>
+        <div class="float-right">
+          <a class="x2" href="/">x</a>
+        </div>
         <div class="form-group tituloTela">Crie sua mensagem</div>
         <div class="accordion" id="accordionExample">
           <div class="card">
